2019-06-24  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-plinks.el (find-urlretrieve00, ee-urlretrieve-3)
	(find-urlretrieve0, find-urlretrieve): new functions.

	* eev-elinks.el (find-here-links-3): ask if the user wants to
	overwrite `ee-window-configuration-before-M-h-M-3'.

	* eev-intro.el (find-here-links-intro): added some figures.

	* eev-pdflike.el (ee-find-pdf-text, ee-find-pdftotext-text)
	(ee-find-texworkspdf-page): added the missing ","s.

2019-06-23  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-elinks.el (ee-find-eboundkey-links): reordered the links.
	(ee-find-efunction-links): reordered the links.
	(find-efunction-links): reordered the links.
	(find-elongkey-links): reordered the links.
	(find-ekey-links): reordered the links.

	* eev-intro.el (find-eev-quick-intro): new section: "4.2.
	`find-ekey-links' and friends".

	* eev-beginner.el (eev-beginner): do not bind `M-h M-h' to
	`find-here-links-beginner'.

2019-06-22  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-pdflike.el: make `find-pdf-page' use texworks on M$ Windows.
	(ee-pdftotext-program, ee-texworks-program): new variables.

2019-06-21  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-intro.el (find-here-links-intro): new function.
	(find-emacs-keys-intro): added references to `M-h M-3', `M-h M-w',
	and `M-h M-1'.

	* eev-elinks.el (find-here-links-3): new function.
	(find-here-links-1): new function.
	(ee-window-configuration-before-M-h-M-3): new variable.
	(ee-find-here-links0): added a reference to `find-here-links-3'.

	* eev-mode.el (eev-mode-map-set): added bindings to `M-h M-1' and
	`M-h M-3' (`find-here-links-1' and `find-here-links-3').

2019-06-17  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-beginner.el (eev-beginner): bind `M-h M-h' to
	`find-here-links-beginner'.

	* eev-blinks.el (ee-find-eejumps-header): added examples.

2019-06-16  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-intro.el (find-emacs-keys-intro): list `M-h M-k', `M-h M-f',